Sunshine Forecase basic index layout part 2

--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -7,11 +7,11 @@
         content="IE=edge">
   <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
-  <title>Sunshine Forecast | Weather Site | Barbara Chamberlin</title>
+  <title>Sunshine Forecast Weather | Weather Site | Barbara Chamberlin</title>
   <meta name="author"
         content="Barbara Chamberlin">
   <meta name="description"
-        content="This assignment is to observe and document three website that use correct design principles with reflective live sites.">
+        content="This is the Sunshine Forecast Weather website homepage.">
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link rel="stylesheet"
@@ -35,26 +35,31 @@
 <body>
 
   <header>
-    <nav>
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-    </nav>
-
-
+    <picture>
+      <img src="images/sun-weather-icon.png"
+           alt="Sunshine Forecast Logo Icon">
+    </picture>
+    <h1>Sunshine Forecast Weather</h1>
+    <p>Forecast is our middle name.</p>
   </header>
+
+  <nav>
+    <ul>
+      <li>Home</li>
+      <li>Preston</li>
+      <li>Soda Springs</li>
+      <li>Fish Haven</li>
+      <li>Storm Center</li>
+      <li>Gallery</li>
+    </ul>
+  </nav>
 
   <main>
 
   </main>
+
   <footer>
+    <map name="#"></map>
     &copy; <span id="copyrightyear"></span> | Barbara Chamberlin | Oklahoma | <a class="byu-link"
        href="https://www.byui.edu/online"> BYU-I Learning </a>
     <p>Last Updated: <span id="lastupdated"></span></p>
