work up lesson 3 9-30

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <li>Lesson 02: <a class="link"
              href="lesson2/design-principles.html"><b>Design Principles Document</b></a></li>
         <li>Lesson 03: <a class="link"
-             href="#"><b>Assignment Link</b></a></li>
+             href="lesson3/index.html"><b>Website Planning Document</b></a></li>
         <li>Lesson 04: <a class="link"
              href="#"><b>Link</b> </a> <b>|</b> <a class="link"
              href="#"> <b>Link</b></a></li></b>
