--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -2,68 +2,67 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible"
-        content="IE=edge">
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1.0">
-  <title>Sunshine Forecast Weather | Weather Site | Barbara Chamberlin</title>
-  <meta name="author"
-        content="Barbara Chamberlin">
-  <meta name="description"
-        content="This is the Sunshine Forecast Weather website homepage.">
-  <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-  <link rel="stylesheet"
-        href="css/small.css">
-  <link rel="stylesheet"
-        href="css/medium.css">
-  <link rel="stylesheet"
-        href="css/large.css">
-  <script defer
-          src="js/script.js"></script>
-  <link rel="preconnect"
-        href="https://fonts.googleapis.com">
-  <link rel="preconnect"
-        href="https://fonts.gstatic.com"
-        crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Roboto&display=swap"
-        rel="stylesheet">
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible"
+            content="IE=edge">
+      <meta name="viewport"
+            content="width=device-width, initial-scale=1.0">
+      <title>Sunshine Forecast Weather | Site Plan</title>
+      <meta name="author"
+            content="Barbara Chamberlin">
+      <meta name="description"
+            content="This is the Sunshine Forecast Weather site plan.">
+      <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+      <link rel="stylesheet"
+            href="css/small.css">
+      <link rel="stylesheet"
+            href="css/medium.css">
+      <link rel="stylesheet"
+            href="css/large.css">
+      <script defer
+              src="js/script.js"></script>
+      <link rel="preconnect"
+            href="https://fonts.googleapis.com">
+      <link rel="preconnect"
+            href="https://fonts.gstatic.com"
+            crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Roboto&display=swap"
+            rel="stylesheet">
 
 </head>
 
 <body>
 
-  <header>
-    <picture>
-      <img src="images/sun-weather-icon.png"
-           alt="Sunshine Forecast Logo Icon">
-    </picture>
-    <h1>Sunshine Forecast Weather</h1>
-    <p>Forecast is our middle name.</p>
-  </header>
+      <header>
+            <img src="images/sun-weather-icon.png"
+                 alt="Sunshine Forecast Logo Icon">
+            <h1>Sunshine Forecast Weather</h1>
+            <p>Forecast Is Our Middle Name</p>
 
-  <nav>
-    <ul>
-      <li>Home</li>
-      <li>Preston</li>
-      <li>Soda Springs</li>
-      <li>Fish Haven</li>
-      <li>Storm Center</li>
-      <li>Gallery</li>
-    </ul>
-  </nav>
+      </header>
+      <nav>
+            <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="color-scheme.html">Color Scheme</a></li>
+                  <li><a href="target-audience.html">Target Audience</a></li>
+                  <li><a href="typography.html">Typography</a></li>
+            </ul>
+      </nav>
 
-  <main>
+      <main>
 
-  </main>
+            <h2>Site Plan</h2>
+            <h3>Site Purpose</h3>
+            <p>The Sunshine Forecast Weather website is a tool and information source to be used by those able to access
+                  the
+                  internet.</p>
+      </main>
 
-  <footer>
-    <map name="#"></map>
-    &copy; <span id="copyrightyear"></span> | Barbara Chamberlin | Oklahoma | <a class="byu-link"
-       href="https://www.byui.edu/online"> BYU-I Learning </a>
-    <p>Last Updated: <span id="lastupdated"></span></p>
-  </footer>
+      <footer>
+
+            &copy; <span id="copyrightyear"></span>
+      </footer>
 </body>
 
 </html>
