--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -27,7 +27,7 @@
       <link rel="preconnect"
             href="https://fonts.gstatic.com"
             crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Roboto&display=swap"
+      <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Yaldevi&display=swap"
             rel="stylesheet">
 
 </head>
