--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -27,9 +27,8 @@
       <link rel="preconnect"
             href="https://fonts.gstatic.com"
             crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Roboto&display=swap"
+      <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Yaldevi&display=swap"
             rel="stylesheet">
-
 </head>
 
 <body>
