--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </header>
 
             <picture>
-                  <img src="images/barbpic1.jpg"
+                  <img src="images/barb-smiles.jpg"
                        alt="Barbara Chamberlin"
                        title="Barbara Chamberlin in her element.">
             </picture>
