--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -34,11 +34,17 @@
 
 <body>
 
-      <header>
-            <img src="images/sun-weather-icon.png"
-                 alt="Sunshine Forecast Logo Icon">
-            <h1>Sunshine Forecast Weather</h1>
-            <p>Forecast Is Our Middle Name</p>
+      <header class="head-grid-container">
+
+            <div>
+                  <img src="images/sun-weather-icon.png"
+                       alt="Sunshine Forecast Logo Icon">
+            </div>
+            <div>
+                  <h1>Sunshine Forecast Weather</h1>
+                  <p>Forecast Is Our Middle Name</p>
+            </div>
+
       </header>
       <nav>
             <ul>
@@ -51,14 +57,20 @@
 
       <main>
 
+
             <h2>Color Scheme</h2>
-            <img src="images/color-scheme-weather-site.jpg"
+            <img src="images/color-pick.jpg"
                  alt="color scheme">
+            <p>Cool earthy tones were selected for the color scheme.</p>
+
+
+
       </main>
 
       <footer>
 
             &copy; <span id="copyrightyear"></span>
+            <p> | Footer</p>
       </footer>
 </body>
 
