--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -33,11 +33,16 @@
 
 <body>
 
-      <header>
-            <img src="images/sun-weather-icon.png"
-                 alt="Sunshine Forecast Logo Icon">
-            <h1>Sunshine Forecast Weather</h1>
-            <p>Forecast Is Our Middle Name</p>
+      <header class="head-grid-container">
+
+            <div>
+                  <img src="images/sun-weather-icon.png"
+                       alt="Sunshine Forecast Logo Icon">
+            </div>
+            <div>
+                  <h1>Sunshine Forecast Weather</h1>
+                  <p>Forecast Is Our Middle Name</p>
+            </div>
 
       </header>
       <nav>
@@ -50,17 +55,29 @@
       </nav>
 
       <main>
-
             <h2>Site Plan</h2>
-            <h3>Site Purpose</h3>
-            <p>The Sunshine Forecast Weather website is a tool and information source to be used by those able to access
-                  the
-                  internet.</p>
+            <div class="main-grid-container">
+                  <div>
+                        <h3>Site Purpose</h3>
+                        <p>The Sunshine Forecast Weather website is a tool and information source to be used by those
+                              able to
+                              access
+                              the
+                              internet.</p>
+                  </div>
+                  <div>
+                        <h3>Website</h3>
+                        <p><a href="https://www.sunshineforecastweather.com"
+                                 alt="The website goes to an open web domain.">https://sunshineforecastweather.com</a>
+                        </p>
+                  </div>
+            </div>
       </main>
 
       <footer>
 
             &copy; <span id="copyrightyear"></span>
+            <p> | Footer</p>
       </footer>
 </body>
 
