--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -34,11 +34,16 @@
 
 <body>
 
-  <header>
-    <img src="images/sun-weather-icon.png"
-         alt="Sunshine Forecast Logo Icon">
-    <h1>Sunshine Forecast Weather</h1>
-    <p>Forecast is our middle name.</p>
+  <header class="head-grid-container">
+
+    <div>
+      <img src="images/sun-weather-icon.png"
+           alt="Sunshine Forecast Logo Icon">
+    </div>
+    <div>
+      <h1>Sunshine Forecast Weather</h1>
+      <p>Forecast Is Our Middle Name</p>
+    </div>
 
   </header>
   <nav>
@@ -53,68 +58,113 @@
   <main>
 
     <h2>Target Audience and Scenarios</h2>
-    <h3>Target Audience</h3>
-    <ul>
-      <li><b>Who:</b> Have access to internet website search engines and are curious about weather conditions. </li>
-      <li><b>Age:</b> 14 to 100</li>
-      <li><b>Income:</b> Income levels will very and range in the average of 50,000 yearly. </li>
-      <li><b>Education:</b> Will also range from high school on up to higher education. </li>
-      <li><b>Motivation:</b> To acquire up to the minute accurate weather warnings, forecasts, and current conditions.
-      </li>
-    </ul>
-    <h4>Ashley M. Berry</h4>
-    <img src="images/caring-teacher-sfw.jpg"
-         alt="A woman teacher with a young student.">
-    <ul>
-      <li><b>Occupation:</b>Elementary School Assistant Principal</li>
-      <li><b>Demographics:</b>35 years old. Master’s degree in education.</li>
-      <li><b>Goals and motivation for using the site:</b>Weather site used to access weather information for
-        professional and personal consumption. At work, she relies on data to make decisions regarding the safety and
-        health of the children under her care (i.e., whether they can go outside and play or if they need to come in for
-        safety). Professional and personal use to gather information regarding future outdoor conditions. </li>
-      <li><b>Social:</b>very driven individual to her work, church congregation, and family. She loves gardening and, in
-        her downtime catching the rays of the sun by the pool. </li>
-      <li><b>Technology:</b>Primary use is her iPhone windows computer, yet she has access to many internet devices,
-        including iPad, chrome books, apple computers, and tablets.</li>
-      <li><b>Quote:</b>“My top goal is to provide education and safety for my students, and I use tools that give me
-        quick availability to the information I am looking for.”</li>
-    </ul>
-    <br>
-    <h4>Russell F. Erickson </h4>
-    <img src="images/gone-fishing-sfw.jpg"
-         alt="A man fly fishing.">
-    <ul>
-      <li><b>Occupation:</b>ACW Commander at US Airforce Base</li>
-      <li><b>Demographics:</b>48 years old. Executive Leadership Training from the University of North Carolina at
-        Chapel Hill.</li>
-      <li><b>Goals and motivation for using the site:</b>Acquire accurate daily forecast information for outdoor sports,
-        fishing, and leisure activities. </li>
-      <li><b>Social:</b>enjoys the great outdoors and is an avid fly fisherman and boater. </li>
-      <li><b>Technology:</b>access to a wide array of technology yet prefers to view internet sites with the convenience
-        of his Galaxy 8 android phone.</li>
-      <li><b>Quote:</b>“The lake is my second home and relies on weather correct weather inform to fuel my preparation
-        for upcoming events. Nothing ruins an outdoor event like not being prepared.”</li>
 
-    </ul>
+    <div class="target-grid-container">
+      <div>
+        <h3>Target Audience</h3>
+        <ul>
+          <li><b>Who:</b> Have access to internet website search engines and are curious about weather conditions. </li>
+          <li><b>Age:</b> 14 to 100</li>
+          <li><b>Income:</b> Income levels will very and range in the average of 50,000 yearly. </li>
+          <li><b>Education:</b> Will also range from high school on up to higher education. </li>
+          <li><b>Motivation:</b> To acquire up to the minute accurate weather warnings, forecasts, and current
+            conditions.
+          </li>
+        </ul>
+      </div>
+      <div>
+        <h4>Ashley M. Berry</h4>
+        <img src="images/caring-teacher-sfw.jpg"
+             alt="A woman teacher with a young student.">
+        <ul>
 
-    <h3>Scenarios</h3>
-    <ol>
-      <li>What’s the family reunion weekend forecast?</li>
-      <li>When can we plan our outdoor wedding?</li>
-      <li>Is there going to be favorable weather for our trip?</li>
-      <li>How do I acquire acclimate weather warnings?</li>
-      <li>How should I dress for the day?</li>
-      <li>How much rain fall is expected for gardeners? </li>
-      <li>When can I expect to see extreme hot or cold temperature effect my area?</li>
-      <li>Is today’s pollen count going to affect my quality of life?</li>
-      <li>How do I get up to date flood advisory information? </li>
-      <li>What are the overnight temperatures for camping?</li>
-    </ol>
+          <li><b>Occupation:</b>Elementary School Assistant Principal</li>
+          <li><b>Demographics:</b>35 years old. Master’s degree in education.</li>
+          <li><b>Goals and motivation for using the site:</b>Weather site used to access weather information for
+            professional and personal consumption. At work, she relies on data to make decisions regarding the safety
+            and
+            health of the children under her care (i.e., whether they can go outside and play or if they need to come in
+            for
+            safety). Professional and personal use to gather information regarding future outdoor conditions. </li>
+          <li><b>Social:</b>very driven individual to her work, church congregation, and family. She loves gardening
+            and,
+            in
+            her downtime catching the rays of the sun by the pool. </li>
+          <li><b>Technology:</b>Primary use is her iPhone windows computer, yet she has access to many internet devices,
+            including iPad, chrome books, apple computers, and tablets.</li>
+          <li><b>Quote:</b>“My top goal is to provide education and safety for my students, and I use tools that give me
+            quick availability to the information I am looking for.”</li>
+        </ul>
+      </div>
+      <br>
+      <div>
+        <h4>Russell F. Erickson </h4>
+        <img src="images/gone-fishing-sfw.jpg"
+             alt="A man fly fishing.">
+        <ul>
+
+          <li><b>Occupation:</b>ACW Commander at US Airforce Base</li>
+          <li><b>Demographics:</b>48 years old. Executive Leadership Training from the University of North Carolina at
+            Chapel Hill.</li>
+          <li><b>Goals and motivation for using the site:</b>Acquire accurate daily forecast information for outdoor
+            sports,
+            fishing, and leisure activities. </li>
+          <li><b>Social:</b>enjoys the great outdoors and is an avid fly fisherman and boater. </li>
+          <li><b>Technology:</b>access to a wide array of technology yet prefers to view internet sites with the
+            convenience
+            of his Galaxy 8 android phone.</li>
+          <li><b>Quote:</b>“The lake is my second home and relies on weather correct weather inform to fuel my
+            preparation
+            for upcoming events. Nothing ruins an outdoor event like not being prepared.”</li>
+        </ul>
+      </div>
+      <div>
+        <h3>Scenarios</h3>
+        <ol>
+          <li>What’s the family reunion weekend forecast?</li>
+          <li>How do I acquire acclimate weather warnings?</li>
+          <li>How much rain fall is expected for gardeners? </li>
+          <li>When can I expect to see extreme hot or cold temperature effect my area?</li>
+          <li>Is today’s pollen count going to affect my quality of life?</li>
+        </ol>
+
+        <ul>
+          <li><b>Scenario 1: What’s the family reunion weekend forecast?</b></li>
+          <ul>
+            <li>Families rely on Sunshine Forecast Weather to plan essential events such as family reunions, weddings,
+              vacations, and
+              funerals.</li>
+          </ul>
+          <li><b>Scenario 2: How do I acquire acclimate weather warnings?</b></li>
+          <ul>
+            <li>When bad weather strikes people depend on accurate up to the minute weather warning from Sunshine
+              Forecast
+              Weather.</li>
+          </ul>
+          <li><b>Scenario 3: How much rain fall is expected for gardeners?</b></li>
+          <ul>
+            <li>Gardeners are looking to Sunshine Forecast Weather to supply them with the tools to keep their gardens
+              gree.
+            </li>
+          </ul>
+          <li><b>Scenario 4: When can I expect to see extreme hot or cold temperature effect my area?</b></li>
+          <ul>
+            <li>Cold weather can burst pipes and hot weather can be detrimental to health. Local surveys show people are
+              choosing Sunshine Forecast Weather for long term temperature information.</li>
+          </ul>
+          <li><b>Scenario 5: Is today’s pollen count going to affect my quality of life?</b></li>
+          <ul>
+            <li>Allergy sufferers are logging on to find out daily pollen counts for health and wellness.</li>
+          </ul>
+        </ul>
+      </div>
+    </div>
   </main>
 
   <footer>
 
     &copy; <span id="copyrightyear"></span>
+    <p> | Footer</p>
   </footer>
 </body>
 
