--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <li>Lesson 03: <a class="link"
                                  href="lesson3/index.html"><b>Website Planning Document</b></a></li>
                         <li>Lesson 04: <a class="link"
-                                 href="#"><b>Link</b> </a> <b>|</b> <a class="link"
+                                 href="lesson4/preston-4.html"><b>Preston Idaho</b> </a> <b>|</b> <a class="link"
                                  href="#"> <b>Link</b></a></li></b>
                   </ul>
             </main>
