--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -33,20 +33,20 @@
 
 <body>
 
-      <header class="head-grid-container">
-            <picture class="icon">
-                  <img src="images/sun-weather-icon.png"
-                       alt="Sunshine Forecast Logo Icon">
-            </picture>
+      <header>
+
+            <img src="images/sun-weather-icon.png"
+                 alt="Sunshine Forecast Logo Icon">
+
             <section>
                   <h1>Sunshine Forecast Weather</h1>
                   <p>Forecast Is Our Middle Name</p>
             </section>
       </header>
-      <nav class="navigation">
-            <ul>
+      <nav>
+            <ul class="navigation">
                   <li><a class="menu"
-                           href="#">🍔 Menu</a></li>
+                           href="#">&#9776; Menu</a></li>
                   <li><a href="#">Home</a></li>
                   <li><a href="#">Preston</a></li>
                   <li><a href="#">Soda Springs</a></li>
@@ -58,8 +58,7 @@
 
       <main>
             <h2>Preston Idaho</h2>
-            <div class="main-grid-container">
-                  <!-- <img src="#" alt="#"> -->
+            <div class="main-container">
                   <p>Hero w/ weather summary</p>
                   <p>5 Day Forecast</p>
                   <p>Article</p>
@@ -69,8 +68,9 @@
 
       <footer>
 
-            &copy; <p>Sunshine Forecast Weather | Contact Info. | Media Links</p>
-            <span id="copyrightyear"></span>
+            <p> &copy; <span id="copyrightyear"></span> &#160 Sunshine Forecast Weather</p>
+            <p><span id="currentyear"></span></p>
+
       </footer>
 </body>
 
