--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -34,20 +34,20 @@
 
 <body>
 
-  <header class="head-grid-container">
+  <header>
 
-    <div>
-      <img src="images/sun-weather-icon.png"
-           alt="Sunshine Forecast Logo Icon">
-    </div>
-    <div>
+    <img src="images/sun-weather-icon.png"
+         alt="Sunshine Forecast Logo Icon">
+
+    <section>
       <h1>Sunshine Forecast Weather</h1>
       <p>Forecast Is Our Middle Name</p>
-    </div>
-
+    </section>
   </header>
   <nav>
-    <ul>
+    <ul class="navigation">
+      <li><a class="menu"
+           href="#">&#9776; Menu</a></li>
       <li><a href="index.html">Home</a></li>
       <li><a href="color-scheme.html">Color Scheme</a></li>
       <li><a href="target-audience.html">Target Audience</a></li>
@@ -107,8 +107,9 @@
 
   <footer>
 
-    &copy; <span id="copyrightyear"></span>
-    <p> | Footer</p>
+    <p> &copy; <span id="copyrightyear"></span> &#160 Sunshine Forecast Weather</p>
+    <p><span id="currentyear"></span></p>
+
   </footer>
 </body>
 
