; added to space wk 4

--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -68,7 +68,7 @@
 
       <footer>
 
-            <p> &copy; <span id="copyrightyear"></span> &#160 Sunshine Forecast Weather</p>
+            <p> &copy; <span id="copyrightyear"></span> &#160; Sunshine Forecast Weather</p>
             <p><span id="currentyear"></span></p>
 
       </footer>
