wk 4 link added

--- a/index.html
+++ b/index.html
@@ -50,11 +50,13 @@
                         <li>Lesson 03: <a class="link"
                                  href="lesson3/index.html"><b>Website Planning Document</b></a></li>
                         <li>Lesson 04: <a class="link"
-                                 href="lesson4/preston-4.html"><b>Preston Idaho</b> </a> <b>|</b> <a class="link"
-                                 href="#"> <b>Link</b></a></li></b>
+                                 href="lesson4/preston-4.html"><b>Preston Idaho</b></a></li>
+                        <li>Lesson 05: <a class="link"
+                                 href="#"><b>Link</b></a></li>
+                        <li>Lesson 06: <a class="link"
+                                 href="#"><b>Link</b></a></li>
                   </ul>
             </main>
-
             <footer>
                   &copy; <span id="copyrightyear"></span> | Barbara Chamberlin | Oklahoma | <a class="byu-link"
                      href="https://www.byui.edu/online"> BYU-I Learning </a>
