--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -12,6 +12,8 @@
             content="Barbara Chamberlin">
       <meta name="description"
             content="This is the Sunshine Forecast Weather Preston Idaho page.">
+      <link rel="shortcut icon"
+            href="images/favicon.ico">
       <link rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
       <link rel="stylesheet"
@@ -58,6 +60,18 @@
 
       <main>
             <h2>Preston Idaho</h2>
+
+            <div class="hero-container">
+                  <div class="hero-ph">
+                        <img  src="images/hero-img.jpg" alt="hero image">
+                  </div>
+                  <section class="weathersummary">
+                        <h3>Weather Summary</h3>
+                        <p>Label: Value</p>
+                        <p>Label: Value</p>
+                        <p>Label: Value</p>
+                     </section>
+            </div>
             <div class="main-container">
                   <p>Hero w/ weather summary</p>
                   <p>5 Day Forecast</p>
