change brands and theme

--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -7,11 +7,11 @@
             content="IE=edge">
       <meta name="viewport"
             content="width=device-width, initial-scale=1.0">
-      <title>Sunshine Forecast Weather | Site Plan</title>
+      <title>Sunshine Forecast | Site Plan</title>
       <meta name="author"
             content="Barbara Chamberlin">
       <meta name="description"
-            content="This is the Sunshine Forecast Weather site plan.">
+            content="This is the Sunshine Forecast color scheme site plan.">
       <link rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
       <link rel="stylesheet"
@@ -40,8 +40,8 @@
                  alt="Sunshine Forecast Logo Icon">
 
             <section>
-                  <h1>Sunshine Forecast Weather</h1>
-                  <p>Forecast Is Our Middle Name</p>
+                  <h1>Sunshine Forecast</h1>
+                  <p>We take our day sunny side up.</p>
             </section>
       </header>
       <nav>
@@ -69,7 +69,7 @@
 
       <footer>
 
-            <p> &copy; <span id="copyrightyear"></span> &#160 Sunshine Forecast Weather</p>
+            <p> &copy; <span id="copyrightyear"></span> &#160 Sunshine Forecast</p>
             <p><span id="currentyear"></span></p>
 
       </footer>
