--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -7,11 +7,11 @@
         content="IE=edge">
   <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
-  <title>Sunshine Forecast Weather | Site Plan</title>
+  <title>Sunshine Forecast | Site Plan</title>
   <meta name="author"
         content="Barbara Chamberlin">
   <meta name="description"
-        content="This is the Sunshine Forecast Weather site plan.">
+        content="This is the Sunshine Forecast target audience site plan.">
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link rel="stylesheet"
@@ -40,8 +40,8 @@
          alt="Sunshine Forecast Logo Icon">
 
     <section>
-      <h1>Sunshine Forecast Weather</h1>
-      <p>Forecast Is Our Middle Name</p>
+      <h1>Sunshine Forecast </h1>
+      <p>We take our day sunny side up.</p>
     </section>
   </header>
   <nav>
@@ -80,7 +80,7 @@
 
           <li><b>Occupation:</b>Elementary School Assistant Principal</li>
           <li><b>Demographics:</b>35 years old. Master’s degree in education.</li>
-          <li><b>Goals and motivation for using the site:</b>Weather site used to access weather information for
+          <li><b>Goals and motivation for using the site:</b>Weather site used to access forecast information for
             professional and personal consumption. At work, she relies on data to make decisions regarding the safety
             and
             health of the children under her care (i.e., whether they can go outside and play or if they need to come in
@@ -113,7 +113,7 @@
           <li><b>Technology:</b>access to a wide array of technology yet prefers to view internet sites with the
             convenience
             of his Galaxy 8 android phone.</li>
-          <li><b>Quote:</b>“The lake is my second home and relies on weather correct weather inform to fuel my
+          <li><b>Quote:</b>“The lake is my second home and I rely on correct weather inform to fuel my
             preparation
             for upcoming events. Nothing ruins an outdoor event like not being prepared.”</li>
         </ul>
@@ -131,26 +131,25 @@
         <ul>
           <li><b>Scenario 1: What’s the family reunion weekend forecast?</b></li>
           <ul>
-            <li>Families rely on Sunshine Forecast Weather to plan essential events such as family reunions, weddings,
+            <li>Families rely on Sunshine Forecast to plan essential events such as family reunions, weddings,
               vacations, and
               funerals.</li>
           </ul>
           <li><b>Scenario 2: How do I acquire acclimate weather warnings?</b></li>
           <ul>
             <li>When bad weather strikes people depend on accurate up to the minute weather warning from Sunshine
-              Forecast
-              Weather.</li>
+              Forecast.</li>
           </ul>
           <li><b>Scenario 3: How much rain fall is expected for gardeners?</b></li>
           <ul>
-            <li>Gardeners are looking to Sunshine Forecast Weather to supply them with the tools to keep their gardens
+            <li>Gardeners are looking to Sunshine Forecast to supply them with the tools to keep their gardens
               gree.
             </li>
           </ul>
           <li><b>Scenario 4: When can I expect to see extreme hot or cold temperature effect my area?</b></li>
           <ul>
             <li>Cold weather can burst pipes and hot weather can be detrimental to health. Local surveys show people are
-              choosing Sunshine Forecast Weather for long term temperature information.</li>
+              choosing Sunshine Forecast for long term temperature information.</li>
           </ul>
           <li><b>Scenario 5: Is today’s pollen count going to affect my quality of life?</b></li>
           <ul>
@@ -163,7 +162,7 @@
 
   <footer>
 
-    <p> &copy; <span id="copyrightyear"></span> &#160 Sunshine Forecast Weather</p>
+    <p> &copy; <span id="copyrightyear"></span> &#160 Sunshine Forecast</p>
     <p><span id="currentyear"></span></p>
 
   </footer>
