--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -7,11 +7,11 @@
             content="IE=edge">
       <meta name="viewport"
             content="width=device-width, initial-scale=1.0">
-      <title>Sunshine Forecast Weather | Preston Idaho</title>
+      <title>Sunshine Forecast | Preston Idaho</title>
       <meta name="author"
             content="Barbara Chamberlin">
       <meta name="description"
-            content="This is the Sunshine Forecast Weather Preston Idaho page.">
+            content="This is the Sunshine Forecast - Preston Idaho page.">
       <link rel="shortcut icon"
             href="images/favicon.ico">
       <link rel="stylesheet"
@@ -41,8 +41,8 @@
                  alt="Sunshine Forecast Logo Icon">
 
             <section>
-                  <h1>Sunshine Forecast Weather</h1>
-                  <p>Forecast Is Our Middle Name</p>
+                  <h1>Sunshine Forecast</h1>
+                  <p>We take our day sunny side up.</p>
             </section>
       </header>
       <nav>
@@ -66,10 +66,12 @@
                         <img  src="images/hero-img.jpg" alt="hero image">
                   </div>
                   <section class="weathersummary">
-                        <h3>Weather Summary</h3>
-                        <p>Label: Value</p>
-                        <p>Label: Value</p>
-                        <p>Label: Value</p>
+                        <h3>Weather Summary<hr/></h3>
+                        <p>Currently: <span id="current">Partly Cloudy</span></p>
+                        <p>High: <span id="high">68</span> &deg;</p>
+                        <p>Wind Chill: <span id="wind-chill">68</span> &deg;</p>
+                        <p>Humidity: <span id="humid">43</span> %</p>
+                        <p>Wind Speed: <span id="wind-speed">6</span> mph</p>
                      </section>
             </div>
             <div class="main-container">
@@ -82,7 +84,7 @@
 
       <footer>
 
-            <p> &copy; <span id="copyrightyear"></span> &#160; Sunshine Forecast Weather</p>
+            <p> &copy; <span id="copyrightyear"></span> &#160; Sunshine Forecast</p>
             <p><span id="currentyear"></span></p>
 
       </footer>
