--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -7,11 +7,11 @@
             content="IE=edge">
       <meta name="viewport"
             content="width=device-width, initial-scale=1.0">
-      <title>Sunshine Forecast Weather | Site Plan</title>
+      <title>Sunshine Forecast | Site Plan</title>
       <meta name="author"
             content="Barbara Chamberlin">
       <meta name="description"
-            content="This is the Sunshine Forecast Weather site plan.">
+            content="This is the Sunshine Forecast site plan.">
       <link rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
       <link rel="stylesheet"
@@ -39,8 +39,8 @@
                  alt="Sunshine Forecast Logo Icon">
 
             <section>
-                  <h1>Sunshine Forecast Weather</h1>
-                  <p>Forecast Is Our Middle Name</p>
+                  <h1>Sunshine Forecast</h1>
+                  <p>We take our day sunny side up.</p>
             </section>
       </header>
       <nav>
@@ -59,7 +59,7 @@
             <div class="main-container">
                   <div>
                         <h3>Site Purpose</h3>
-                        <p>The Sunshine Forecast Weather website is a tool and information source to be used by those
+                        <p>The Sunshine Forecast website is a tool and information source to be used by those
                               able to
                               access
                               the
@@ -67,8 +67,8 @@
                   </div>
                   <div>
                         <h3>Website</h3>
-                        <p><a href="https://www.sunshineforecastweather.com"
-                                 alt="The website goes to an open web domain.">https://sunshineforecastweather.com</a>
+                        <p><a href="https://www.sunshineforecast.com"
+                                 alt="The website goes to an open web domain.">https://sunshineforecast.com</a>
                         </p>
                   </div>
             </div>
@@ -76,7 +76,7 @@
 
       <footer>
 
-            <p> &copy; <span id="copyrightyear"></span> &#160 Sunshine Forecast Weather</p>
+            <p> &copy; <span id="copyrightyear"></span> &#160 Sunshine Forecast</p>
             <p><span id="currentyear"></span></p>
       </footer>
 </body>
