--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
                         <li>Lesson 04: <a class="link"
                                  href="lesson4/preston-4.html"><b>Preston Idaho</b></a></li>
                         <li>Lesson 05: <a class="link"
-                                 href="lesson5/dom-manipulation/bom.html"><b>DOM Manipulation | </b></a><a class="link"
+                                 href="lesson5/dom-manipulation/bom.html"><b>DOM Manipulation</b></a><span> | </span><a
+                                 class="link"
                                  href="lesson5/preston-5.html"><b>Preston Town Page Continued</b></a></li>
                         <li>Lesson 06: <a class="link"
                                  href="#"><b>Link</b></a></li>
