--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -2,92 +2,160 @@
 <html lang="en">
 
 <head>
-      <meta charset="UTF-8">
-      <meta http-equiv="X-UA-Compatible"
-            content="IE=edge">
-      <meta name="viewport"
-            content="width=device-width, initial-scale=1.0">
-      <title>Sunshine Forecast | Preston Idaho</title>
-      <meta name="author"
-            content="Barbara Chamberlin">
-      <meta name="description"
-            content="This is the Sunshine Forecast - Preston Idaho page.">
-      <link rel="shortcut icon"
-            href="images/favicon.ico">
-      <link rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-      <link rel="stylesheet"
-            href="css/small.css">
-      <link rel="stylesheet"
-            href="css/medium.css">
-      <link rel="stylesheet"
-            href="css/large.css">
-      <script defer
-              src="js/script.js"></script>
-      <link rel="preconnect"
-            href="https://fonts.googleapis.com">
-      <link rel="preconnect"
-            href="https://fonts.gstatic.com"
-            crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Yaldevi&display=swap"
-            rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible"
+        content="IE=edge">
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1.0">
+  <title>Sunshine Forecastn Idaho</title>
+  <meta name="author"
+        content="Barbara Chamberlin">
+  <meta name="description"
+        content="This is the Sunshine Forecast - Preston Idaho page.">
+  <link rel="shortcut icon"
+        href="images/favicon.ico">
+  <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel="stylesheet"
+        href="css/small.css">
+  <link rel="stylesheet"
+        href="css/medium.css">
+  <link rel="stylesheet"
+        href="css/large.css">
+  <script defer
+          src="js/script.js"></script>
+  <link rel="preconnect"
+        href="https://fonts.googleapis.com">
+  <link rel="preconnect"
+        href="https://fonts.gstatic.com"
+        crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Yaldevi&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
+  <div class="pancakes">
+    <p class="cooking">
+      🥞 Saturday, come join us for “Pancakes in the Park”
+      at 9:00 am at Preston Community Park. 😋
+    </p>
 
-      <header>
+  </div>
+  <header>
 
-            <img src="images/sun-weather-icon.png"
-                 alt="Sunshine Forecast Logo Icon">
+    <img src="images/sun-weather-icon.png"
+         alt="Sunshine Forecast Logo Icon">
 
-            <section>
-                  <h1>Sunshine Forecast</h1>
-                  <p>We take our day sunny side up.</p>
-            </section>
-      </header>
-      <nav>
-            <ul class="navigation">
-                  <li><a class="menu"
-                           href="#">&#9776; Menu</a></li>
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">Preston</a></li>
-                  <li><a href="#">Soda Springs</a></li>
-                  <li><a href="#">Fish Haven</a></li>
-                  <li><a href="#">Storm Center</a></li>
-                  <li><a href="#">Gallery</a></li>
-            </ul>
-      </nav>
+    <section>
+      <h1>Sunshine Forecast</h1>
+      <p>We take our day sunny side up.</p>
+    </section>
+  </header>
+  <nav>
+    <ul class="navigation">
+      <li><a class="menu"
+           href="#">&#9776; Menu</a></li>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Preston</a></li>
+      <li><a href="#">Soda Springs</a></li>
+      <li><a href="#">Fish Haven</a></li>
+      <li><a href="#">Storm Center</a></li>
+      <li><a href="#">Gallery</a></li>
+    </ul>
+  </nav>
 
-      <main>
-            <h2>Preston Idaho</h2>
+  <main>
+    <h2>Preston Idaho</h2>
 
-            <div class="hero-container">
-                  <div class="hero-ph">
-                        <img  src="images/hero-img.jpg" alt="hero image">
-                  </div>
-                  <section class="weathersummary">
-                        <h3>Weather Summary<hr/></h3>
-                        <p>Currently: <span id="current">Partly Cloudy</span></p>
-                        <p>High: <span id="high">68</span> &deg;</p>
-                        <p>Wind Chill: <span id="wind-chill">68</span> &deg;</p>
-                        <p>Humidity: <span id="humid">43</span> %</p>
-                        <p>Wind Speed: <span id="wind-speed">6</span> mph</p>
-                     </section>
-            </div>
-            <div class="main-container">
-                  <p>Hero w/ weather summary</p>
-                  <p>5 Day Forecast</p>
-                  <p>Article</p>
-                  <p>Contact Information</p>
-            </div>
-      </main>
+    <div class="hero-container">
+      <div class="hero-ph">
+        <img src="images/hero-img.jpg"
+             alt="hero image">
+      </div>
+      <section class="weathersummary">
+        <h3>Weather Summary
+          <hr />
+        </h3>
+        <p>Currently: <span id="current">Partly Cloudy</span></p>
+        <p>High: <span id="high">68</span> &deg;</p>
+        <p>Wind Chill: <span id="wind-chill">68</span> &deg;</p>
+        <p>Humidity: <span id="humid">43</span> %</p>
+        <p>Wind Speed: <span id="wind-speed">6</span> mph</p>
+      </section>
+    </div>
+    <h3>5 Day Forecast</h3>
+    <div class="forecast">
+      <div class="forecast-day">
+        <span class="day">Monday</span>
+        <img src="images/cloud-with-rain.png"
+             alt="rain icon">
+        <span class="data">Rainy</span>
+      </div>
+      <div class="forecast-day">
+        <span class="day">Tuesday</span>
+        <img src="images/cloud-with-snow.png"
+             alt="snow icon">
+        <span class="data">Snowy</span>
+      </div>
+      <div class="forecast-day">
+        <span class="day">Wednesday</span>
+        <img src="images/cloud-with-lightning-and-rain.png"
+             alt="storm icon">
+        <span class="data">Stormy</span>
+      </div>
+      <div class="forecast-day">
+        <span class="day">Thursday</span>
+        <img src="images/sun-behind-small-cloud.png"
+             alt="cloud icon">
+        <span class="data">Cloudy</span>
+      </div>
+      <div class="forecast-day">
+        <span class="day">Friday</span>
+        <img src="images/sun.png"
+             alt="sun icon">
+        <span class="data">Sunny</span>
+      </div>
+    </div>
 
-      <footer>
+    <div class="main-container">
+      <p>Hero w/ weather summary</p>
+      <p>5 Day Forecast</p>
+      <p>Article</p>
+      <p>Contact Information</p>
+    </div>
+  </main>
 
-            <p> &copy; <span id="copyrightyear"></span> &#160; Sunshine Forecast</p>
-            <p><span id="currentyear"></span></p>
+  <footer>
 
-      </footer>
+    <div class="vcard">
+      <div class="org">Sunshine Forecast</div>
+      <div class="adr">
+        <a href="https://goo.gl/maps/pkMykZqhob49MrN48">
+          <div class="street-address">450 E 800 S.</div>
+          <span class="locality">Preston</span>,
+          <span class="region">ID</span>,
+          <span class="postal-code">83263</span>
+        </a>
+      </div>
+      <p>
+        <div class="tel">(208) 867-5309</div>
+      </p>
+      <p>
+        <div class="email"><a href="mailto:sunshineforecast@gmail.com">sunshineforecast@gmail.com</a></div>
+      </p>
+    </div>
+
+    <p> &copy; <span id="copyrightyear"></span> &#160; Sunshine Forecast </p>
+    <p><span id="currentyear"></span></p>
+
+    <a><img src="images/facebook.png"
+           alt="Sunshine Forecast's Facebook page link."></a>
+    <a><img src="images/instagram.png"
+           alt="Sunshine Forecast's Instagram account link."></a>
+    <a><img src="images/twitter.png"
+           alt="Sunshine Forecast's Twitter site link."></a>
+
+  </footer>
 </body>
 
 </html>
