last change for Sat night

--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -89,31 +89,31 @@
         <span class="day">Monday</span>
         <img src="images/cloud-with-rain.png"
              alt="rain icon">
-        <span class="data">Rainy</span>
+        <span>Rainy</span>
       </div>
       <div class="forecast-day">
         <span class="day">Tuesday</span>
         <img src="images/cloud-with-snow.png"
              alt="snow icon">
-        <span class="data">Snowy</span>
+        <span>Snowy</span>
       </div>
       <div class="forecast-day">
         <span class="day">Wednesday</span>
         <img src="images/cloud-with-lightning-and-rain.png"
              alt="storm icon">
-        <span class="data">Stormy</span>
+        <span>Stormy</span>
       </div>
       <div class="forecast-day">
         <span class="day">Thursday</span>
         <img src="images/sun-behind-small-cloud.png"
              alt="cloud icon">
-        <span class="data">Cloudy</span>
+        <span>Cloudy</span>
       </div>
       <div class="forecast-day">
         <span class="day">Friday</span>
         <img src="images/sun.png"
              alt="sun icon">
-        <span class="data">Sunny</span>
+        <span>Sunny</span>
       </div>
     </div>
 
